feat: add Spotify Connect device persistence (#1)
* feat: add device persistence utility

Add utility functions for persisting Spotify Connect device name to XDG config file.
- Creates Vicify.json at ~/.config/vicinae/extensions/vicify/Vicify.json
- Implements saveLastDeviceName(), getLastDeviceName(), clearLastDeviceName()
- Follows XDG Base Directory specification

* feat: implement auto-selection of last used device

Automatically switch to last used Spotify Connect device on extension startup.
- Loads stored device name from config file
- Searches available devices for match
- Transfers playback to last used device if found
- Shows toast notification on successful auto-selection

* fix: update Spotify OAuth redirect URI to 127.0.0.1

Change redirect URI from localhost to 127.0.0.1 for OAuth callback.
- Updates REDIRECT_URI constant in spotify.ts
- Improves compatibility across different network configurations
- Ensures callback server binds to correct address

* chore: replace extension icon with SVG format

Update extension icon from PNG to SVG for better scalability.
- Update package.json icon reference
- Remove old PNG file
- Add new SVG icon

* docs: update README with Spotify setup instructions

Add comprehensive setup guide for Spotify app configuration.
- Include OAuth redirect URI (127.0.0.1:8888/callback)
- List required Spotify API scopes
- Add feature overview
- Document device persistence behavior

* docs: add AGENTS.md for AI development guide

Create comprehensive guide for AI agents working in the codebase.
- Document build and development commands
- Include code style guidelines and patterns
- Document Vicinae API usage
- Note lack of testing infrastructure
- File naming and import conventions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "RazoBeckett",
   "contributors": [],
   "pastContributors": [],
-  "icon": "extension_icon.png",
+  "icon": "extension_icon.svg",
   "commands": [
     {
       "name": "search",
